--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="wrapper-div">
     <div id="logo-nav-div" class="clearfix">
     <div id="logo-div"><a href="*"><img
-    src="/images/templogo.png" width="25%"></a></div>
+    src="./images/templogo.png" width="25%"></a></div>
     <div id="nav-div"><h3>
     <a href="*" target="_blank">Home</a>
     <a href="*" target="_blank">About</a>
@@ -32,7 +32,7 @@
     <div class="box"><img src="https://righteousguitars.com/cdn/shop/products/10603_3481.jpg?v=1673481799" width="90%"><h3>description</h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
     <div class="box"><img src="https://i.redd.it/f32lol53wz391.jpg" width="90%"><h3>description</h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
     </div>
-    <div id="footer-div"><img src="/images/templogo.png" width="10%"><br>
+    <div id="footer-div"><img src="./images/templogo.png" width="10%"><br>
         Dominic Madlangbayan<br>
         domadlangbayan@gmail.com</div>
     </div>
